update explorer code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,11 @@ add_service_files(
   OctomapToCoords.srv
 )
 
+add_message_files(
+  FILES
+  area.msg
+)
+
 generate_messages(
   DEPENDENCIES
   std_msgs
@@ -79,3 +84,4 @@ catkin_install_python(PROGRAMS scripts/test_flight.py DESTINATION ${CATKIN_PACKA
 catkin_install_python(PROGRAMS scripts/mpc_implementation.py DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
 catkin_install_python(PROGRAMS scripts/helper.py DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
 catkin_install_python(PROGRAMS scripts/gcs.py DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
+catkin_install_python(PROGRAMS scripts/explorer.py DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
