fov code and initial target points publisher

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,7 @@ add_service_files(
 add_message_files(
   FILES
   area.msg
+  norms.msg
 )
 
 generate_messages(
@@ -85,3 +86,5 @@ catkin_install_python(PROGRAMS scripts/mpc_implementation.py DESTINATION ${CATKI
 catkin_install_python(PROGRAMS scripts/helper.py DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
 catkin_install_python(PROGRAMS scripts/gcs.py DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
 catkin_install_python(PROGRAMS scripts/explorer.py DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
+catkin_install_python(PROGRAMS scripts/uav_fov.py DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
+catkin_install_python(PROGRAMS scripts/explorer_path.py DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
